# cxx_modules

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  atomic_dawg.cpp  bar.cpp  dawg.cpp  foo.cpp  foobar.cpp  g++.txt  toy.cpp
papers/: P0947R1: Another take on Modules.html  P0986R0: Comparison of Modules Proposals.html
